# arcaneum

./: .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  COLLECTIONS_AND_TYPES.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_SOURCE_CODE_INDEXING.md  docker-compose.yml  pyproject.toml  test-install-mac.sh  test-install-ubuntu.sh
.beads/: .gitignore  issues.jsonl
.claude-plugin/: README.md  marketplace.json  plugin.json  settings.example.json
.claude-plugin/skills/arc-collection/: SKILL.md
.claude-plugin/skills/arc-container/: SKILL.md
.claude-plugin/skills/arc-corpus/: SKILL.md
.claude-plugin/skills/arc-indexes/: SKILL.md
.claude-plugin/skills/arc-search/: SKILL.md
.github/workflows/: gpu-smoke.yml  install-smoke.yml  release.yml  test.yml  update-homebrew.yml
commands/: collection.md  config.md  container.md  corpus.md  create-collection.md  create-corpus.md  doctor.md  index-pdfs.md  index-source.md  index.md  indexes.md  list-collections.md  models.md  search-text.md  search.md  store.md  sync-directory.md
deploy/: README.md  docker-compose.yml
doc/: README.md
doc/guides/: QUICKSTART.md  arc-cli-reference.md  claude-code-plugin.md  pdf-indexing.md
doc/rdr/: RDR-001-project-structure.md  RDR-002-qdrant-server-setup.md  RDR-003-collection-creation.md  RDR-004-pdf-bulk-indexing.md  RDR-005-source-code-indexing.md  RDR-006-claude-code-integration.md  RDR-007-semantic-search.md  RDR-008-fulltext-search-server-setup.md  RDR-009-dual-indexing-strategy.md  RDR-010-pdf-fulltext-indexing.md  RDR-011-source-code-fulltext-indexing.md  RDR-012-fulltext-search-claude-integration.md  README.md  TEMPLATE.md
doc/reference/: cli-output-format.md  plugin-compliance.md
doc/testing/: CORPORATE-PROXY.md  OFFLINE-MODE.md  TEST-COMMANDS.md  TESTING.md
docs/: BENCHMARKING.md  CONTRIBUTING-DOCS.md  DEPENDENCY_NOTES.md  README.md  qdrant-optimization.md
docs/guides/: claude-code-plugin.md  cli-reference.md  pdf-indexing.md  persisted-schema.md  qdrant-migration.md  quickstart.md
docs/rdr/: RDR-001-project-structure.md  RDR-003-collection-creation.md  RDR-004-pdf-bulk-indexing.md  RDR-005-source-code-indexing.md  RDR-006-claude-code-integration.md  RDR-007-semantic-search.md  RDR-008-fulltext-search-server-setup.md  RDR-009-dual-indexing-strategy.md  RDR-010-pdf-fulltext-indexing.md  RDR-011-source-code-fulltext-indexing.md  RDR-012-fulltext-search-claude-integration.md  RDR-013-indexing-performance-optimization.md  RDR-014-markdown-indexing.md  RDR-015-retain-memory-management.md  RDR-016-implementation-summary.md  RDR-016-pdf-text-normalization.md  RDR-017-collection-export-import.md  RDR-018-claude-interaction-logging.md  RDR-019-package-distribution.md  RDR-020-gpu-fallback-stability.md  RDR-021-contextual-embedding-enrichment.md  RDR-022-advanced-pdf-extraction.md  RDR-023-advanced-pdf-integration.md  README.md
docs/rdr/post-mortem/: 001-project-structure.md  002-qdrant-server-setup.md  003-collection-creation.md  004-pdf-bulk-indexing.md  005-source-code-indexing.md  006-claude-code-integration.md  007-semantic-search.md  008-fulltext-search-server-setup.md  009-dual-indexing-strategy.md  010-pdf-fulltext-indexing.md  011-source-code-fulltext-indexing.md  012-fulltext-search-claude-integration.md  013-indexing-performance-optimization.md  014-markdown-indexing.md  016-pdf-text-normalization.md  017-collection-export-import.md  018-claude-interaction-logging.md  SYNTHESIS.md
docs/reference/: cli-output-format.md  collections-and-types.md  plugin-compliance.md  release-compatibility-policy.md
docs/testing/: corporate-proxy.md  offline-mode.md  source-code-indexing.md  test-commands.md  testing.md  unit-tests.md
homebrew/Formula/: arcaneum.rb
scripts/: analyze_profile.py  arc-index-pdfs  benchmark_indexing.py  benchmark_pdf_indexing.py  bump-version.sh  ci_quality_ratchet.py  create-test-pdf.py  download-models.py  format-release-notes.py  meilisearch-manage.sh  profile_indexing.py  profile_with_cprofile.py  qdrant-backup.sh  qdrant-enable-disk-storage.py  qdrant-enable-quantization.py  qdrant-manage.sh  qdrant-monitor-segments.py  qdrant-optimize-segments.py  qdrant-restore.sh  spike-022-quality-eval-v2.py  spike-022-quality-eval.py  test-claude-integration.sh  test-pdf-indexing.sh  test-plugin-commands.sh  validate-plugin.sh
src/arcaneum/: __init__.py  config.py  migrations.py  paths.py  ssl_config.py
src/arcaneum/cli/: __init__.py  collections.py  concurrency.py  config.py  corpus.py  corpus_defaults.py  docker.py  doctor.py  errors.py  export_import.py  fulltext.py  index_markdown.py  index_pdfs.py  index_source.py  index_text.py  interaction_logger.py  logging_config.py  logs.py  main.py  models.py  output.py  search.py  search_merge.py  sync.py  utils.py
src/arcaneum/collections/: __init__.py  init.py
src/arcaneum/embeddings/: _compat.py  client.py  memory_probe.py  model_cache.py
src/arcaneum/fulltext/: __init__.py  client.py  indexes.py
src/arcaneum/indexing/: ast_chunker.py  collection_metadata.py  dual_indexer.py  git_metadata_sync.py  git_operations.py  qdrant_indexer.py  source_code_pipeline.py  types.py  uploader.py  verify.py
src/arcaneum/monitoring/: cpu_stats.py  pipeline_profiler.py
tests/: INSTALL_TESTING.md  __init__.py  conftest.py  test_collection_creation.py  test_export_import.py
tests/cli/: test_discover_files.py  test_interaction_logger.py  test_search_text.py  test_utils.py
tests/docker/: Dockerfile.ubuntu22  Dockerfile.ubuntu24  test-installation.sh
tests/fulltext/: test_client.py  test_indexes.py
tests/gpu/: test_embedding_gpu_smoke.py
tests/indexing/: __init__.py  test_ast_chunker.py  test_dual_indexer.py  test_git_metadata_sync.py  test_git_operations.py  test_qdrant_indexer.py  test_rename_detection.py  test_source_code_pipeline.py  test_types.py
tests/integration/: test_fulltext_code_indexing.py  test_fulltext_search_workflow.py
tests/schema/: test_document.py
tests/unit/: test_config.py  test_paths.py  test_ssl_config.py
(+76 files in other folders)
