[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaneum"
version = "0.1.0"
description = "CLI tools for semantic and full-text search with Qdrant and MeiliSearch"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Arcaneum Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.3.0",
    "qdrant-client>=1.15.1",
    "fastembed>=0.7.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "pydantic>=2.12.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    # PDF indexing dependencies (RDR-004)
    "pymupdf>=1.26.5",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.12.0",
    # Source code indexing dependencies (RDR-005)
    "tree-sitter-language-pack>=0.10.0",
    "llama-index-core>=0.14.6",
    "GitPython>=3.1.45",
    # Markdown indexing dependencies (RDR-014)
    "markdown-it-py>=4.0.0",
    "python-frontmatter>=1.1.0",
    "pygments>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "ruff>=0.14.2",
]
ocr = [
    "easyocr>=1.7.2",
]

[project.scripts]
arc = "arcaneum.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W"]
