[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaneum"
version = "0.4.0"
description = "CLI tools for semantic and full-text search with Qdrant and MeiliSearch"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Arcaneum Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "semantic-search",
    "full-text-search",
    "qdrant",
    "meilisearch",
    "vector-database",
    "embeddings",
    "claude-code",
    "ai-tools",
    "pdf-indexing",
    "code-indexing",
]

dependencies = [
    "click>=8.3.0",
    "qdrant-client>=1.16.1",
    "fastembed>=0.7.3",
    "sentence-transformers>=5.2.0",  # 5.2.0 fixes compatibility with torch 2.9+
    "transformers>=4.40.0,<4.54.0",  # 4.54+ has DynamicCache breaking change (see docs/DEPENDENCY_NOTES.md)
    "torch>=2.8.0",  # 2.9.x now works with sentence-transformers 5.2.0+
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "pydantic>=2.12.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "psutil>=6.1.0",  # CPU monitoring (RDR-013 Phase 1)
    "xxhash>=3.5.0",  # Fast non-cryptographic hashing for file deduplication
    # PDF indexing dependencies (RDR-004, RDR-016)
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2",  # Auto-OCR for garbled text (>90% unreadable chars triggers Tesseract)
    "pymupdf-layout>=1.27.2",  # Auto-initialized by pymupdf4llm for layout detection
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.10.0",
    # Source code indexing dependencies (RDR-005)
    "tree-sitter-language-pack>=0.10.0",
    "llama-index-core>=0.14.6",
    "GitPython>=3.1.45",
    # Markdown indexing dependencies (RDR-014)
    "markdown-it-py>=4.0.0",
    "python-frontmatter>=1.1.0",
    "pygments>=2.19.0",
    # SOCKS proxy support for httpx (required when running in Claude Code sandbox)
    "socksio>=1.0.0",
    # Collection export/import (RDR-017)
    "msgpack>=1.1.0",
    "numpy>=1.26.0",
    # Full-text search (RDR-008)
    "meilisearch>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "black>=25.9.0",
    "ruff>=0.14.2",
]
ocr = [
    "easyocr>=1.7.2",
]

[project.scripts]
arc = "arcaneum.cli.main:main"

[project.urls]
Homepage = "https://github.com/cwensel/arcaneum"
Repository = "https://github.com/cwensel/arcaneum"
Documentation = "https://github.com/cwensel/arcaneum#readme"
Issues = "https://github.com/cwensel/arcaneum/issues"
Changelog = "https://github.com/cwensel/arcaneum/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require services)",
    "e2e: End-to-end tests",
    "slow: Tests taking >5 seconds",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/arcaneum"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
